2005-11-17  Adam Jocksch  <ajocksch@redhat.com>

	* InlineBuffer.java (getLastLine): Added.
	(getFirstLine): Added.
	* InlineViewer.java (drawLineNumber): Added.
	* SourceBuffer.java (getLastLine): Added.
	* SourceViewWidget.java (refresh): Now pulls the width of the drawing
	area from getLastLine rather than getLineCount, since in the case of
	inline code these two will not be the same.
	(drawMargin): Extracted out protected drawLineNumber method.

2005-11-16  Adam Jocksch  <ajocksch@redhat.com>

	* InlineBuffer.java (InlineBuffer): Removed debugging output.
	(getLineCount): Added.
	* InlineViewer.java (toggleChild): Removed.
	(load): Removed.
	(moveDown): Remvoed.
	(getScope): Removed.
	(setScope): Remvoed.
	(setSubScopeAtCurrentLine): Removed.
	(clearSubScopeAtCurrentLine): Removed.
	(drawMargin): Removed.
	* SourceBuffer.java (getLineCount): Removed boolean parameter since it
	was unused.
	* SourceViewWidget.java (mouseEvent): Now checks to see if there is
	inline code being displayed, and if there is compensates for it.
	(toggleChild): Moved the setting of expanded to before the 
	InlineInstance is added.
	(drawMargin): Fixed bug with the line numbers being off, combined two
	if blocks dealing with the current line.
	* InlineHandler.java: Removed.	

	* InlineBuffer.java: Added.
	* InlineViewer.java (InlineViewer): Now takes StackLevel and
	DOMInlineInstance.
	(toggleChild): Commented out for now.
	(moveDown): Ditto.
	(setSubScopeAtCurrentLine): Ditto.
	(drawMargin): Corrected bug where r,g, and b for a color were all being
	populated by the r component.
	* SourceBuffer.java (SourceBuffer): Created constructor that just 
	initializes, but doesn't load data.
	(getInlineInstance): Added.
	(init): Removed section that loads data.
	(loadFile): Changed to protected, extracted out loadLines function.
	(loadLines): Refactored out of loadFile.
	(createTags): Changed to protected.
	* SourceViewWidget.java (SourceViewWidget): Added constructor that takes